# manfei-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
alembic/: env.py
alembic/versions/: 20260217_0809_052c36e7ecc4_add_fields_for_phase_2_cms.py  20260221_add_site_settings_table.py  20260222_uuid_softdelete_membertier.py  20260228_1555_4d3cd28835d6_init_all_tables_with_uuid.py  20260504_0830_a3f5b9e2_add_transaction_fields.py  20260509_0900_b1c2d3e4_add_installment_fields.py  20260509_1000_c3d4e5f6_change_service_name_to_text.py
routers/: admin_router.py  auth_router.py  public_router.py  staff_router.py  upload_router.py
scripts/: __init__.py  migrate_data.py
utils/: cloudinary.py
