[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "cloudinary>=1.44.1",
    "email-validator==2.1.0",
    "fastapi==0.109.2",
    "httpx==0.26.0",
    "jose>=1.0.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]==2.0.27",
    "uvicorn[standard]==0.27.1",
]
